# vsql-extension-template

./: AGENTS.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
mysql-test/r/: hello_basic.result
mysql-test/t/: hello_basic.test
src/: hello.cc
